--- a/Sample3 - Varios Frames de Configuración/unit1.lfm
+++ b/Sample3 - Varios Frames de Configuración/unit1.lfm
@@ -13,7 +13,7 @@ object Form1: TForm1
     left = 16
     top = 10
     object MenuItem1: TMenuItem
-      Caption = 'Config'
+      Caption = 'Configuración'
       OnClick = MenuItem1Click
     end
   end
