--- a/Sample2 - Several Config Frames/FormConfig.lfm
+++ b/Sample2 - Several Config Frames/FormConfig.lfm
@@ -10,7 +10,7 @@ object Config: TConfig
   OnDestroy = FormDestroy
   OnShow = FormShow
   LCLVersion = '1.4.2.0'
-  object BitAplicar: TBitBtn
+  object btnApply: TBitBtn
     Left = 184
     Height = 30
     Top = 248
@@ -18,10 +18,10 @@ object Config: TConfig
     Caption = '&Aplicar'
     Default = True
     Kind = bkYes
-    OnClick = BitAplicarClick
+    OnClick = btnApplyClick
     TabOrder = 0
   end
-  object BitCancel: TBitBtn
+  object btnCancel: TBitBtn
     Left = 328
     Height = 30
     Top = 248
@@ -32,14 +32,14 @@ object Config: TConfig
     ModalResult = 2
     TabOrder = 1
   end
-  object BitAceptar: TBitBtn
+  object btnAccept: TBitBtn
     Left = 24
     Height = 30
     Top = 248
     Width = 75
     DefaultCaption = True
     Kind = bkOK
-    OnClick = BitAceptarClick
+    OnClick = btnAcceptClick
     TabOrder = 2
   end
   object lstCateg: TListBox
