--- a/Predefined/FrameCfgEdit.lfm
+++ b/Predefined/FrameCfgEdit.lfm
@@ -1,14 +1,11 @@
-object fcEdit: TfcEdit
-  Left = 0
+inherited fcEdit: TfcEdit
   Height = 242
-  Top = 0
   Width = 332
   ClientHeight = 242
   ClientWidth = 332
-  TabOrder = 0
   DesignLeft = 237
   DesignTop = 261
-  object chkMarLinAct: TCheckBox
+  object chkMarLinAct: TCheckBox[0]
     Left = 8
     Height = 19
     Top = 123
@@ -17,7 +14,7 @@ object fcEdit: TfcEdit
     OnChange = chkMarLinActChange
     TabOrder = 0
   end
-  object cbutLinAct: TColorButton
+  object cbutLinAct: TColorButton[1]
     Left = 240
     Height = 25
     Top = 120
@@ -26,7 +23,7 @@ object fcEdit: TfcEdit
     ButtonColorSize = 16
     ButtonColor = clBlack
   end
-  object Label1: TLabel
+  object Label1: TLabel[2]
     Left = 200
     Height = 15
     Top = 126
@@ -34,7 +31,7 @@ object fcEdit: TfcEdit
     Caption = 'Color:'
     ParentColor = False
   end
-  object Label6: TLabel
+  object Label6: TLabel[3]
     Left = 8
     Height = 15
     Top = 16
@@ -42,7 +39,7 @@ object fcEdit: TfcEdit
     Caption = 'Letra:'
     ParentColor = False
   end
-  object cmbTipoLetra: TComboBox
+  object cmbTipoLetra: TComboBox[4]
     Left = 48
     Height = 23
     Top = 9
@@ -51,7 +48,7 @@ object fcEdit: TfcEdit
     TabOrder = 1
     Text = 'cmbTipoLetra'
   end
-  object Label7: TLabel
+  object Label7: TLabel[5]
     Left = 168
     Height = 15
     Top = 16
@@ -59,14 +56,17 @@ object fcEdit: TfcEdit
     Caption = 'Tamaño:'
     ParentColor = False
   end
-  object spTam: TSpinEdit
+  object spTam: TSpinEdit[6]
     Left = 248
     Height = 23
     Top = 10
     Width = 50
+    MaxValue = 20
+    MinValue = 5
     TabOrder = 2
+    Value = 5
   end
-  object Label8: TLabel
+  object Label8: TLabel[7]
     Left = 8
     Height = 15
     Top = 46
@@ -74,7 +74,7 @@ object fcEdit: TfcEdit
     Caption = 'Color de fondo:'
     ParentColor = False
   end
-  object cbutFondo: TColorButton
+  object cbutFondo: TColorButton[8]
     Left = 96
     Height = 25
     Top = 40
@@ -83,7 +83,7 @@ object fcEdit: TfcEdit
     ButtonColorSize = 16
     ButtonColor = clBlack
   end
-  object Label9: TLabel
+  object Label9: TLabel[9]
     Left = 176
     Height = 15
     Top = 46
@@ -91,7 +91,7 @@ object fcEdit: TfcEdit
     Caption = 'Color texto:'
     ParentColor = False
   end
-  object cbutTexto: TColorButton
+  object cbutTexto: TColorButton[10]
     Left = 240
     Height = 25
     Top = 40
@@ -100,7 +100,7 @@ object fcEdit: TfcEdit
     ButtonColorSize = 16
     ButtonColor = clBlack
   end
-  object chkVerBarDesV: TCheckBox
+  object chkVerBarDesV: TCheckBox[11]
     Left = 8
     Height = 19
     Top = 72
@@ -108,13 +108,13 @@ object fcEdit: TfcEdit
     Caption = 'Barra de desplaz &Vert.'
     TabOrder = 3
   end
-  object GroupBox1: TGroupBox
+  object GroupBox1: TGroupBox[12]
     Left = 8
     Height = 81
     Top = 152
     Width = 302
     Caption = '                            '
-    ClientHeight = 63
+    ClientHeight = 61
     ClientWidth = 298
     TabOrder = 4
     object chkVerPanVer: TCheckBox
@@ -177,7 +177,7 @@ object fcEdit: TfcEdit
       TabOrder = 2
     end
   end
-  object chkResPalCur: TCheckBox
+  object chkResPalCur: TCheckBox[13]
     Left = 8
     Height = 19
     Top = 96
@@ -186,7 +186,7 @@ object fcEdit: TfcEdit
     OnChange = chkResPalCurChange
     TabOrder = 5
   end
-  object chkVerBarDesH: TCheckBox
+  object chkVerBarDesH: TCheckBox[14]
     Left = 171
     Height = 19
     Top = 72
@@ -194,7 +194,7 @@ object fcEdit: TfcEdit
     Caption = 'Barra de desplaz &Horiz.'
     TabOrder = 6
   end
-  object Label10: TLabel
+  object Label10: TLabel[15]
     Left = 200
     Height = 15
     Top = 96
@@ -202,7 +202,7 @@ object fcEdit: TfcEdit
     Caption = 'Color:'
     ParentColor = False
   end
-  object cbutResPal: TColorButton
+  object cbutResPal: TColorButton[16]
     Left = 240
     Height = 25
     Top = 90
