--- a/ConfigFrame.lfm
+++ b/ConfigFrame.lfm
@@ -3,6 +3,7 @@ object CfgFrame: TCfgFrame
   Height = 240
   Top = 0
   Width = 320
+  LCLVersion = '1.6.0.4'
   TabOrder = 0
   DesignLeft = 257
   DesignTop = 201
